--- a/haidokter/src/main/resources/application.properties
+++ b/haidokter/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernet.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Pembuatan database (creat || create drop || validate || update)
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=2020
